further refined css pages into seperate display sheet and an animation sheet

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 
 
         
-        <div id="circle-container2" >
-            <div id="circle-b-1">
+        <div id="circle-container" >
+            <div id="circle-1">
                 <img src="/images/skinny-orange.svg" />
             </div>
-                <div id="circle-b-2">
+                <div id="circle-2">
                     <img src="/images/med-blue.svg" />
                 </div>
-                    <div id="circle-b-3">
+                    <div id="circle-3">
                         <img src="/images/full-white.svg" />
                     </div>
         </div>
